--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
     />
     <link href="style.css" rel="stylesheet" />
-    <title>GoG.com</title>
+    <title>GOG.com</title>
   </head>
   <body>
     <div>
@@ -238,12 +238,14 @@
     <div class="container mt-5">
       <div class="row">
         <div class="col-6 col-md-6 col-lg-4 col-xl-3 mb-3">
-          <div class="card" style="width: 18rem; height: 17.5rem">
-            <img src="images/tile (2).jpg" class="card-img-top" alt="..." />
+          <div class="card">
+            <img
+              src="images/tile (4).jpg"
+              class="card-img-top small-img"
+              alt="..."
+            />
             <div class="card-body">
-              <p class="card-text game-name">
-                Roller Coaster Tycoon: Deluxe Edition
-              </p>
+              <p class="card-text game-name">Smart City Plan</p>
               <div class="d-flex">
                 <i class="bi bi-laptop-fill me-auto"></i>
                 <span class="game-price ms-1"> &euro; 19.99</span>
@@ -252,10 +254,14 @@
           </div>
         </div>
         <div class="col-6 col-md-6 col-lg-4 col-xl-3 mb-3">
-          <div class="card" style="width: 18rem; height: 17.5rem">
-            <img src="images/tile (6).jpg" class="card-img-top" alt="..." />
+          <div class="card">
+            <img
+              src="images/tile (19).jpg"
+              class="card-img-top small-img"
+              alt="..."
+            />
             <div class="card-body">
-              <p class="card-text game-name">Disco Elysium</p>
+              <p class="card-text game-name">Soulsaga</p>
               <div class="d-flex">
                 <i class="bi bi-laptop-fill"></i>
                 <i class="bi bi-phone-fill me-auto"></i>
@@ -269,10 +275,14 @@
           </div>
         </div>
         <div class="col-6 col-md-6 col-lg-4 col-xl-3 mb-3">
-          <div class="card" style="width: 18rem; height: 17.5rem">
-            <img src="images/tile (9).jpg" class="card-img-top" alt="..." />
+          <div class="card">
+            <img
+              src="images/tile (28).jpg"
+              class="card-img-top small-img"
+              alt="..."
+            />
             <div class="card-body">
-              <p class="card-text game-name">Bolour's Gate</p>
+              <p class="card-text game-name">Heroes</p>
               <div class="d-flex">
                 <i class="bi bi-laptop-fill me-auto"></i>
                 <span class="discount-percent me-1">-50%</span>
@@ -285,10 +295,14 @@
           </div>
         </div>
         <div class="col-6 col-md-6 col-lg-4 col-xl-3 mb-3">
-          <div class="card" style="width: 18rem; height: 17.5rem">
-            <img src="images/tile (10).jpg" class="card-img-top" alt="..." />
+          <div class="card">
+            <img
+              src="images/tile (32).jpg"
+              class="card-img-top small-img"
+              alt="..."
+            />
             <div class="card-body">
-              <p class="card-text game-name">Armed and Dangerous</p>
+              <p class="card-text game-name">Murder Numbers</p>
               <div class="d-flex">
                 <i class="bi bi-laptop-fill"></i>
                 <i class="bi bi-phone-fill me-auto"></i>
@@ -325,12 +339,14 @@
     <div class="container">
       <div class="row">
         <div class="col-6 col-md-6 col-lg-4 col-xl-3 mb-3">
-          <div class="card" style="width: 18rem; height: 17.5rem">
-            <img src="images/tile (2).jpg" class="card-img-top" alt="..." />
+          <div class="card">
+            <img
+              src="images/tile (4).jpg"
+              class="card-img-top small-img"
+              alt="..."
+            />
             <div class="card-body">
-              <p class="card-text game-name">
-                Roller Coaster Tycoon: Deluxe Edition
-              </p>
+              <p class="card-text game-name">Smart City Plan</p>
               <div class="d-flex">
                 <i class="bi bi-laptop-fill me-auto"></i>
                 <span class="game-price ms-1"> &euro; 19.99</span>
@@ -339,10 +355,14 @@
           </div>
         </div>
         <div class="col-6 col-md-6 col-lg-4 col-xl-3 mb-3">
-          <div class="card" style="width: 18rem; height: 17.5rem">
-            <img src="images/tile (6).jpg" class="card-img-top" alt="..." />
+          <div class="card">
+            <img
+              src="images/tile (19).jpg"
+              class="card-img-top small-img"
+              alt="..."
+            />
             <div class="card-body">
-              <p class="card-text game-name">Disco Elysium</p>
+              <p class="card-text game-name">Soulsaga</p>
               <div class="d-flex">
                 <i class="bi bi-laptop-fill"></i>
                 <i class="bi bi-phone-fill me-auto"></i>
@@ -356,10 +376,14 @@
           </div>
         </div>
         <div class="col-6 col-md-6 col-lg-4 col-xl-3 mb-3">
-          <div class="card" style="width: 18rem; height: 17.5rem">
-            <img src="images/tile (9).jpg" class="card-img-top" alt="..." />
+          <div class="card">
+            <img
+              src="images/tile (28).jpg"
+              class="card-img-top small-img"
+              alt="..."
+            />
             <div class="card-body">
-              <p class="card-text game-name">Bolour's Gate</p>
+              <p class="card-text game-name">Heroes</p>
               <div class="d-flex">
                 <i class="bi bi-laptop-fill me-auto"></i>
                 <span class="discount-percent me-1">-50%</span>
@@ -372,10 +396,14 @@
           </div>
         </div>
         <div class="col-6 col-md-6 col-lg-4 col-xl-3 mb-3">
-          <div class="card" style="width: 18rem; height: 17.5rem">
-            <img src="images/tile (10).jpg" class="card-img-top" alt="..." />
+          <div class="card">
+            <img
+              src="images/tile (32).jpg"
+              class="card-img-top small-img"
+              alt="..."
+            />
             <div class="card-body">
-              <p class="card-text game-name">Armed and Dangerous</p>
+              <p class="card-text game-name">Murder Numbers</p>
               <div class="d-flex">
                 <i class="bi bi-laptop-fill"></i>
                 <i class="bi bi-phone-fill me-auto"></i>
@@ -390,6 +418,297 @@
         </div>
       </div>
     </div>
+
+    <div class="container my-3 highlights">
+      <div class="highlights-value pb-3">
+        <i class="bi bi-star-fill"></i>
+        <span class="ms-1">What's good?</span>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-6 col-md-6 col-lg-6 col-xl-6 mb-3">
+          <div class="card" style="width: auto; height: 28rem">
+            <img src="images/tile (16).jpg" class="card-img-top" alt="..." />
+            <div class="card-body">
+              <p class="card-text game-name">Star Wars</p>
+              <div class="d-flex">
+                <i class="bi bi-laptop-fill me-auto"></i>
+                <span class="game-price ms-1"> &euro; 19.99</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-6 col-md-6 col-lg-6 col-xl-6 mb-3">
+          <div class="row">
+            <div class="col-6 col-md-6 col-lg-6 col-xl-6 mb-3">
+              <div class="card">
+                <img
+                  src="images/tile (4).jpg"
+                  class="card-img-top small-img"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <p class="card-text game-name">Smart City Plan</p>
+                  <div class="d-flex">
+                    <i class="bi bi-laptop-fill me-auto"></i>
+                    <span class="game-price ms-1"> &euro; 19.99</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-6 col-md-6 col-lg-6 col-xl-6 mb-3">
+              <div class="card">
+                <img
+                  src="images/tile (19).jpg"
+                  class="card-img-top small-img"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <p class="card-text game-name">Soulsaga</p>
+                  <div class="d-flex">
+                    <i class="bi bi-laptop-fill"></i>
+                    <i class="bi bi-phone-fill me-auto"></i>
+                    <span class="discount-percent me-1">-50%</span>
+                    <div class="ori-price-dis-price">
+                      <span class="ori-price"> &euro; 39.99</span>
+                      <span class="game-price"> &euro; 19.99</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-6 col-md-6 col-lg-6 col-xl-6 mb-3">
+              <div class="card">
+                <img
+                  src="images/tile (28).jpg"
+                  class="card-img-top small-img"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <p class="card-text game-name">Heroes</p>
+                  <div class="d-flex">
+                    <i class="bi bi-laptop-fill me-auto"></i>
+                    <span class="discount-percent me-1">-50%</span>
+                    <div class="ori-price-dis-price">
+                      <span class="ori-price"> &euro; 39.99</span>
+                      <span class="game-price"> &euro; 19.99</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-6 col-md-6 col-lg-6 col-xl-6 mb-3">
+              <div class="card">
+                <img
+                  src="images/tile (32).jpg"
+                  class="card-img-top small-img"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <p class="card-text game-name">Murder Numbers</p>
+                  <div class="d-flex">
+                    <i class="bi bi-laptop-fill"></i>
+                    <i class="bi bi-phone-fill me-auto"></i>
+                    <span class="discount-percent me-1">-50%</span>
+                    <div class="ori-price-dis-price">
+                      <span class="ori-price"> &euro; 39.99</span>
+                      <span class="game-price"> &euro; 19.99</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="container my-3 highlights">
+      <div class="highlights-value pb-3">
+        <i class="bi bi-star-fill"></i>
+        <span class="ms-1">Recommended for you</span>
+      </div>
+    </div>
+
+    <div class="container mt-3">
+      <div class="row">
+        <div class="col-6 col-md-6 col-lg-4 col-xl-4 mb-3">
+          <div class="card">
+            <img
+              src="images/tile (4).jpg"
+              class="card-img-top small-img"
+              alt="..."
+            />
+            <div class="card-body">
+              <p class="card-text game-name">Smart City Plan</p>
+              <div class="d-flex">
+                <i class="bi bi-laptop-fill me-auto"></i>
+                <span class="game-price ms-1"> &euro; 19.99</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-6 col-md-6 col-lg-4 col-xl-4 mb-3">
+          <div class="card">
+            <img
+              src="images/tile (19).jpg"
+              class="card-img-top small-img"
+              alt="..."
+            />
+            <div class="card-body">
+              <p class="card-text game-name">Soulsaga</p>
+              <div class="d-flex">
+                <i class="bi bi-laptop-fill"></i>
+                <i class="bi bi-phone-fill me-auto"></i>
+                <span class="discount-percent me-1">-50%</span>
+                <div class="ori-price-dis-price">
+                  <span class="ori-price"> &euro; 39.99</span>
+                  <span class="game-price"> &euro; 19.99</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-6 col-md-6 col-lg-4 col-xl-4 mb-3">
+          <div class="card">
+            <img
+              src="images/tile (28).jpg"
+              class="card-img-top small-img"
+              alt="..."
+            />
+            <div class="card-body">
+              <p class="card-text game-name">Heroes</p>
+              <div class="d-flex">
+                <i class="bi bi-laptop-fill me-auto"></i>
+                <span class="discount-percent me-1">-50%</span>
+                <div class="ori-price-dis-price">
+                  <span class="ori-price"> &euro; 39.99</span>
+                  <span class="game-price"> &euro; 19.99</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-6 col-md-6 col-lg-4 col-xl-4 mb-3">
+          <div class="card">
+            <img
+              src="images/tile (32).jpg"
+              class="card-img-top small-img"
+              alt="..."
+            />
+            <div class="card-body">
+              <p class="card-text game-name">Murder Numbers</p>
+              <div class="d-flex">
+                <i class="bi bi-laptop-fill"></i>
+                <i class="bi bi-phone-fill me-auto"></i>
+                <span class="discount-percent me-1">-50%</span>
+                <div class="ori-price-dis-price">
+                  <span class="ori-price"> &euro; 39.99</span>
+                  <span class="game-price"> &euro; 19.99</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-6 col-md-6 col-lg-4 col-xl-4 mb-3">
+          <div class="card">
+            <img
+              src="images/tile (9).jpg"
+              class="card-img-top small-img"
+              alt="..."
+            />
+            <div class="card-body">
+              <p class="card-text game-name">Balour's Gate</p>
+              <div class="d-flex">
+                <i class="bi bi-laptop-fill"></i>
+                <i class="bi bi-phone-fill me-auto"></i>
+                <span class="discount-percent me-1">-50%</span>
+                <div class="ori-price-dis-price">
+                  <span class="ori-price"> &euro; 39.99</span>
+                  <span class="game-price"> &euro; 19.99</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-6 col-md-6 col-lg-4 col-xl-4 mb-3">
+          <div class="card">
+            <img
+              src="images/tile (23).jpg"
+              class="card-img-top small-img"
+              alt="..."
+            />
+            <div class="card-body">
+              <p class="card-text game-name">The surge 2</p>
+              <div class="d-flex">
+                <i class="bi bi-laptop-fill"></i>
+                <i class="bi bi-phone-fill me-auto"></i>
+                <span class="discount-percent me-1">-50%</span>
+                <div class="ori-price-dis-price">
+                  <span class="ori-price"> &euro; 39.99</span>
+                  <span class="game-price"> &euro; 19.99</span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <footer>
+      <div class="bg-footer">
+        <div class="container">
+          <div class="contact-us">
+            <span class="me-2">Redeem code</span>
+            <span class="me-2">Reclaim your game</span>
+            <span class="me-2">GOG Connect</span>
+            <span class="me-2">Contact us</span>
+            <span class="me-2">Carrer oppourtunities</span>
+            <span class="me-auto">Submit your game</span>
+
+            <i class="bi bi-facebook me-3"></i>
+            <i class="bi bi-twitter me-3"></i>
+            <i class="bi bi-twitch me-3"></i>
+          </div>
+
+          <div class="language-currency">
+            <img class="logo me-4" src="images/logo.png" alt="" />
+            <div>
+              <span class="me-2">Language: </span>
+              <span class="me-2">English</span>
+              <span class="me-2">Deutsch</span>
+              <span class="me-2">Français</span>
+              <span class="me-2">Polski</span>
+              <span class="me-2">Pусский</span>
+              <span class="me-auto">中文(简体)</span>
+            </div>
+            <div>
+              <span class="me-2">Currency: </span>
+              <span class="me-2">EUR</span>
+              <span class="me-2">USD</span>
+            </div>
+          </div>
+
+          <div class="legal">
+            <div>
+              <span class="me-3">Legal</span>
+              <span class="me-3">Privacy policy</span>
+              <span class="me-3">Our thanks</span>
+            </div>
+            <div class="part-of">
+              <span class="me-auto">
+                © GOG sp. z o.o. All rights reserved. All trademarks and
+                registered trademarks are the property of their respective
+                owners.
+              </span>
+              <span>Part of CD PROJEKT group.</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
