--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark mt-1 sticky-top">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark mt-1 fixed-top">
         <div class="container px-5">
           <a class="navbar-brand" href="#">
             <img class="logo" src="./images/logo.png" alt="" />
@@ -657,6 +657,292 @@
       </div>
     </div>
 
+    <div class="container mt-3">
+      <div class="row">
+        <div class="col-12 col-md-12 col-lg-8 col-xl-8">
+          <div class="my-3 highlights">
+            <div class="highlights-value pb-3 d-flex">
+              <i class="bi bi-cursor-fill"></i>
+              <span class="ms-1 me-auto">Discover games</span>
+              <div class="discover-font">
+                <span class="">Bestselling</span>
+                <span class="ms-3">New</span>
+                <span class="ms-3">Upcoming</span>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="card mb-3 discover-game-card">
+              <div class="row no-gutters">
+                <div class="col-md-4">
+                  <img
+                    class="discover-game-img"
+                    src="images/tile (33).jpg"
+                    alt="..."
+                  />
+                </div>
+                <div class="col-md-8 ps-4">
+                  <div class="card-body">
+                    <h5 class="card-title">Bug Fables</h5>
+                    <div class="d-flex">
+                      <i class="bi bi-laptop-fill"></i>
+                      <i class="bi bi-phone-fill me-auto"></i>
+                      <span class="discount-percent me-1">-50%</span>
+                      <div class="ori-price-dis-price">
+                        <span class="ori-price"> &euro; 39.99</span>
+                        <span class="game-price"> &euro; 19.99</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="card mb-3 discover-game-card">
+              <div class="row no-gutters">
+                <div class="col-md-4">
+                  <img
+                    class="discover-game-img"
+                    src="images/tile (33).jpg"
+                    alt="..."
+                  />
+                </div>
+                <div class="col-md-8 ps-4">
+                  <div class="card-body">
+                    <h5 class="card-title">Bug Fables</h5>
+                    <div class="d-flex">
+                      <i class="bi bi-laptop-fill"></i>
+                      <i class="bi bi-phone-fill me-auto"></i>
+                      <span class="discount-percent me-1">-50%</span>
+                      <div class="ori-price-dis-price">
+                        <span class="ori-price"> &euro; 39.99</span>
+                        <span class="game-price"> &euro; 19.99</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="card mb-3 discover-game-card">
+              <div class="row no-gutters">
+                <div class="col-md-4">
+                  <img
+                    class="discover-game-img"
+                    src="images/tile (33).jpg"
+                    alt="..."
+                  />
+                </div>
+                <div class="col-md-8 ps-4">
+                  <div class="card-body">
+                    <h5 class="card-title">Bug Fables</h5>
+                    <div class="d-flex">
+                      <i class="bi bi-laptop-fill"></i>
+                      <i class="bi bi-phone-fill me-auto"></i>
+                      <span class="discount-percent me-1">-50%</span>
+                      <div class="ori-price-dis-price">
+                        <span class="ori-price"> &euro; 39.99</span>
+                        <span class="game-price"> &euro; 19.99</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="card mb-3 discover-game-card">
+              <div class="row no-gutters">
+                <div class="col-md-4">
+                  <img
+                    class="discover-game-img"
+                    src="images/tile (33).jpg"
+                    alt="..."
+                  />
+                </div>
+                <div class="col-md-8 ps-4">
+                  <div class="card-body">
+                    <h5 class="card-title">Bug Fables</h5>
+                    <div class="d-flex">
+                      <i class="bi bi-laptop-fill me-auto"></i>
+                      <span class="game-price ms-1"> &euro; 19.99</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="card mb-3 discover-game-card">
+              <div class="row no-gutters">
+                <div class="col-md-4">
+                  <img
+                    class="discover-game-img"
+                    src="images/tile (33).jpg"
+                    alt="..."
+                  />
+                </div>
+                <div class="col-md-8 ps-4">
+                  <div class="card-body">
+                    <h5 class="card-title">Bug Fables</h5>
+                    <div class="d-flex">
+                      <i class="bi bi-laptop-fill"></i>
+                      <i class="bi bi-phone-fill me-auto"></i>
+                      <span class="discount-percent me-1">-50%</span>
+                      <div class="ori-price-dis-price">
+                        <span class="ori-price"> &euro; 39.99</span>
+                        <span class="game-price"> &euro; 19.99</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="card mb-3 discover-game-card">
+              <div class="row no-gutters">
+                <div class="col-md-4">
+                  <img
+                    class="discover-game-img"
+                    src="images/tile (33).jpg"
+                    alt="..."
+                  />
+                </div>
+                <div class="col-md-8 ps-4">
+                  <div class="card-body">
+                    <h5 class="card-title">Bug Fables</h5>
+                    <div class="d-flex">
+                      <i class="bi bi-laptop-fill"></i>
+                      <i class="bi bi-phone-fill me-auto"></i>
+                      <span class="discount-percent me-1">-50%</span>
+                      <div class="ori-price-dis-price">
+                        <span class="ori-price"> &euro; 39.99</span>
+                        <span class="game-price"> &euro; 19.99</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="card mb-3 discover-game-card">
+              <div class="row no-gutters">
+                <div class="col-md-4">
+                  <img
+                    class="discover-game-img"
+                    src="images/tile (33).jpg"
+                    alt="..."
+                  />
+                </div>
+                <div class="col-md-8 ps-4">
+                  <div class="card-body">
+                    <h5 class="card-title">Bug Fables</h5>
+                    <div class="d-flex">
+                      <i class="bi bi-laptop-fill"></i>
+                      <i class="bi bi-phone-fill me-auto"></i>
+                      <span class="discount-percent me-1">-50%</span>
+                      <div class="ori-price-dis-price">
+                        <span class="ori-price"> &euro; 39.99</span>
+                        <span class="game-price"> &euro; 19.99</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="card mb-3 discover-game-card">
+              <div class="row no-gutters">
+                <div class="col-md-4">
+                  <img
+                    class="discover-game-img"
+                    src="images/tile (33).jpg"
+                    alt="..."
+                  />
+                </div>
+                <div class="col-md-8 ps-4">
+                  <div class="card-body">
+                    <h5 class="card-title">Bug Fables</h5>
+                    <div class="d-flex">
+                      <i class="bi bi-laptop-fill"></i>
+                      <i class="bi bi-phone-fill me-auto"></i>
+                      <span class="discount-percent me-1">-50%</span>
+                      <div class="ori-price-dis-price">
+                        <span class="ori-price"> &euro; 39.99</span>
+                        <span class="game-price"> &euro; 19.99</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="card mb-3 discover-game-card">
+              <div class="row no-gutters">
+                <div class="col-md-4">
+                  <img
+                    class="discover-game-img"
+                    src="images/tile (33).jpg"
+                    alt="..."
+                  />
+                </div>
+                <div class="col-md-8 ps-4">
+                  <div class="card-body">
+                    <h5 class="card-title">Bug Fables</h5>
+                    <div class="d-flex">
+                      <i class="bi bi-laptop-fill me-auto"></i>
+                      <span class="game-price ms-1"> &euro; 19.99</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="card mb-3 discover-game-card">
+              <div class="row no-gutters">
+                <div class="col-md-4">
+                  <img
+                    class="discover-game-img"
+                    src="images/tile (33).jpg"
+                    alt="..."
+                  />
+                </div>
+                <div class="col-md-8 ps-4">
+                  <div class="card-body">
+                    <h5 class="card-title">Bug Fables</h5>
+                    <div class="d-flex">
+                      <i class="bi bi-laptop-fill"></i>
+                      <i class="bi bi-phone-fill me-auto"></i>
+                      <span class="discount-percent me-1">-50%</span>
+                      <div class="ori-price-dis-price">
+                        <span class="ori-price"> &euro; 39.99</span>
+                        <span class="game-price"> &euro; 19.99</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-12 col-lg-4 col-xl-4">
+          <div class="my-3 highlights">
+            <div class="highlights-value pb-3">
+              <i class="bi bi-collection-fill"></i>
+              <span class="ms-1">Featured</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <footer>
       <div class="bg-footer">
         <div class="container">
@@ -674,7 +960,7 @@
           </div>
 
           <div class="language-currency">
-            <img class="logo me-4" src="images/logo.png" alt="" />
+            <!-- <img class="logo me-4" src="images/logo.png" alt="" /> -->
             <div>
               <span class="me-2">Language: </span>
               <span class="me-2">English</span>
