--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <title>GOG.com</title>
   </head>
   <body>
-    <div>
+    <div style="margin-top: 5rem">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark mt-1 fixed-top">
         <div class="container px-5">
           <a class="navbar-brand" href="#">
@@ -37,9 +37,6 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav px-4 me-auto">
-              <!-- <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li> -->
               <li class="nav-item dropdown">
                 <a
                   class="nav-link dropdown-toggle"
@@ -665,7 +662,8 @@
               <i class="bi bi-cursor-fill"></i>
               <span class="ms-1 me-auto">Discover games</span>
               <div class="discover-font">
-                <span class="">Bestselling</span>
+                <span class="ms-3">Games for you</span>
+                <span class="ms-3 discover-active">Bestselling</span>
                 <span class="ms-3">New</span>
                 <span class="ms-3">Upcoming</span>
               </div>
@@ -958,25 +956,44 @@
             <i class="bi bi-twitter me-3"></i>
             <i class="bi bi-twitch me-3"></i>
           </div>
+        </div>
+      </div>
 
-          <div class="language-currency">
-            <!-- <img class="logo me-4" src="images/logo.png" alt="" /> -->
-            <div>
-              <span class="me-2">Language: </span>
-              <span class="me-2">English</span>
-              <span class="me-2">Deutsch</span>
-              <span class="me-2">Français</span>
-              <span class="me-2">Polski</span>
-              <span class="me-2">Pусский</span>
-              <span class="me-auto">中文(简体)</span>
+      <div style="background-color: #2f2f2f">
+        <div class="container">
+          <div class="language-img">
+            <img class="logo me-4" src="images/logo.png" alt="" />
+            <div class="language-currency">
+              <div>
+                <span class="me-2">Language: </span>
+                <span class="me-2">English</span>
+                <span class="me-2">Deutsch</span>
+                <span class="me-2">Français</span>
+                <span class="me-2">Polski</span>
+                <span class="me-2">Pусский</span>
+                <span class="me-auto">中文(简体)</span>
+              </div>
+              <div class="currency">
+                <span class="me-2">Currency: </span>
+                <span class="me-2">EUR</span>
+                <span class="me-2">USD</span>
+              </div>
             </div>
-            <div>
-              <span class="me-2">Currency: </span>
-              <span class="me-2">EUR</span>
-              <span class="me-2">USD</span>
+            <div class="download">
+              <div class="download-icon">
+                <i class="bi bi-download mx-3"></i>
+              </div>
+              <div class="download-words me-3">
+                <span>Download GOG Galaxy</span>
+                <span class="for-windows">for Windows</span>
+              </div>
             </div>
           </div>
+        </div>
+      </div>
 
+      <div class="bg-footer">
+        <div class="container">
           <div class="legal">
             <div>
               <span class="me-3">Legal</span>
