discover and some featured

--- a/index.html
+++ b/index.html
@@ -672,21 +672,25 @@
           <div>
             <div class="card mb-3 discover-game-card">
               <div class="row no-gutters">
-                <div class="col-md-4">
+                <div class="col-md-2">
                   <img
                     class="discover-game-img"
                     src="images/tile (33).jpg"
                     alt="..."
                   />
                 </div>
-                <div class="col-md-8 ps-4">
-                  <div class="card-body">
-                    <h5 class="card-title">Bug Fables</h5>
-                    <div class="d-flex">
-                      <i class="bi bi-laptop-fill"></i>
-                      <i class="bi bi-phone-fill me-auto"></i>
+                <div class="col-md-10 ps-2">
+                  <div class="row discover-info">
+                    <div class="col">
+                      <h5 class="card-title">Bug Fables</h5>
+                      <div>
+                        <i class="bi bi-laptop-fill"></i>
+                        <i class="bi bi-phone-fill me-auto"></i>
+                      </div>
+                    </div>
+                    <div class="col discover-group">
                       <span class="discount-percent me-1">-50%</span>
-                      <div class="ori-price-dis-price">
+                      <div class="ori-price-dis-price discover-price">
                         <span class="ori-price"> &euro; 39.99</span>
                         <span class="game-price"> &euro; 19.99</span>
                       </div>
@@ -699,21 +703,25 @@
           <div>
             <div class="card mb-3 discover-game-card">
               <div class="row no-gutters">
-                <div class="col-md-4">
+                <div class="col-md-2">
                   <img
                     class="discover-game-img"
                     src="images/tile (33).jpg"
                     alt="..."
                   />
                 </div>
-                <div class="col-md-8 ps-4">
-                  <div class="card-body">
-                    <h5 class="card-title">Bug Fables</h5>
-                    <div class="d-flex">
-                      <i class="bi bi-laptop-fill"></i>
-                      <i class="bi bi-phone-fill me-auto"></i>
+                <div class="col-md-10 ps-2">
+                  <div class="row discover-info">
+                    <div class="col">
+                      <h5 class="card-title">Bug Fables</h5>
+                      <div>
+                        <i class="bi bi-laptop-fill"></i>
+                        <i class="bi bi-phone-fill me-auto"></i>
+                      </div>
+                    </div>
+                    <div class="col discover-group">
                       <span class="discount-percent me-1">-50%</span>
-                      <div class="ori-price-dis-price">
+                      <div class="ori-price-dis-price discover-price">
                         <span class="ori-price"> &euro; 39.99</span>
                         <span class="game-price"> &euro; 19.99</span>
                       </div>
@@ -726,21 +734,25 @@
           <div>
             <div class="card mb-3 discover-game-card">
               <div class="row no-gutters">
-                <div class="col-md-4">
+                <div class="col-md-2">
                   <img
                     class="discover-game-img"
                     src="images/tile (33).jpg"
                     alt="..."
                   />
                 </div>
-                <div class="col-md-8 ps-4">
-                  <div class="card-body">
-                    <h5 class="card-title">Bug Fables</h5>
-                    <div class="d-flex">
-                      <i class="bi bi-laptop-fill"></i>
-                      <i class="bi bi-phone-fill me-auto"></i>
+                <div class="col-md-10 ps-2">
+                  <div class="row discover-info">
+                    <div class="col">
+                      <h5 class="card-title">Bug Fables</h5>
+                      <div>
+                        <i class="bi bi-laptop-fill"></i>
+                        <i class="bi bi-phone-fill me-auto"></i>
+                      </div>
+                    </div>
+                    <div class="col discover-group">
                       <span class="discount-percent me-1">-50%</span>
-                      <div class="ori-price-dis-price">
+                      <div class="ori-price-dis-price discover-price">
                         <span class="ori-price"> &euro; 39.99</span>
                         <span class="game-price"> &euro; 19.99</span>
                       </div>
@@ -753,43 +765,25 @@
           <div>
             <div class="card mb-3 discover-game-card">
               <div class="row no-gutters">
-                <div class="col-md-4">
+                <div class="col-md-2">
                   <img
                     class="discover-game-img"
                     src="images/tile (33).jpg"
                     alt="..."
                   />
                 </div>
-                <div class="col-md-8 ps-4">
-                  <div class="card-body">
-                    <h5 class="card-title">Bug Fables</h5>
-                    <div class="d-flex">
-                      <i class="bi bi-laptop-fill me-auto"></i>
-                      <span class="game-price ms-1"> &euro; 19.99</span>
+                <div class="col-md-10 ps-2">
+                  <div class="row discover-info">
+                    <div class="col">
+                      <h5 class="card-title">Bug Fables</h5>
+                      <div>
+                        <i class="bi bi-laptop-fill"></i>
+                        <i class="bi bi-phone-fill me-auto"></i>
+                      </div>
                     </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div>
-            <div class="card mb-3 discover-game-card">
-              <div class="row no-gutters">
-                <div class="col-md-4">
-                  <img
-                    class="discover-game-img"
-                    src="images/tile (33).jpg"
-                    alt="..."
-                  />
-                </div>
-                <div class="col-md-8 ps-4">
-                  <div class="card-body">
-                    <h5 class="card-title">Bug Fables</h5>
-                    <div class="d-flex">
-                      <i class="bi bi-laptop-fill"></i>
-                      <i class="bi bi-phone-fill me-auto"></i>
+                    <div class="col discover-group">
                       <span class="discount-percent me-1">-50%</span>
-                      <div class="ori-price-dis-price">
+                      <div class="ori-price-dis-price discover-price">
                         <span class="ori-price"> &euro; 39.99</span>
                         <span class="game-price"> &euro; 19.99</span>
                       </div>
@@ -802,21 +796,25 @@
           <div>
             <div class="card mb-3 discover-game-card">
               <div class="row no-gutters">
-                <div class="col-md-4">
+                <div class="col-md-2">
                   <img
                     class="discover-game-img"
                     src="images/tile (33).jpg"
                     alt="..."
                   />
                 </div>
-                <div class="col-md-8 ps-4">
-                  <div class="card-body">
-                    <h5 class="card-title">Bug Fables</h5>
-                    <div class="d-flex">
-                      <i class="bi bi-laptop-fill"></i>
-                      <i class="bi bi-phone-fill me-auto"></i>
+                <div class="col-md-10 ps-2">
+                  <div class="row discover-info">
+                    <div class="col">
+                      <h5 class="card-title">Bug Fables</h5>
+                      <div>
+                        <i class="bi bi-laptop-fill"></i>
+                        <i class="bi bi-phone-fill me-auto"></i>
+                      </div>
+                    </div>
+                    <div class="col discover-group">
                       <span class="discount-percent me-1">-50%</span>
-                      <div class="ori-price-dis-price">
+                      <div class="ori-price-dis-price discover-price">
                         <span class="ori-price"> &euro; 39.99</span>
                         <span class="game-price"> &euro; 19.99</span>
                       </div>
@@ -829,21 +827,25 @@
           <div>
             <div class="card mb-3 discover-game-card">
               <div class="row no-gutters">
-                <div class="col-md-4">
+                <div class="col-md-2">
                   <img
                     class="discover-game-img"
                     src="images/tile (33).jpg"
                     alt="..."
                   />
                 </div>
-                <div class="col-md-8 ps-4">
-                  <div class="card-body">
-                    <h5 class="card-title">Bug Fables</h5>
-                    <div class="d-flex">
-                      <i class="bi bi-laptop-fill"></i>
-                      <i class="bi bi-phone-fill me-auto"></i>
+                <div class="col-md-10 ps-2">
+                  <div class="row discover-info">
+                    <div class="col">
+                      <h5 class="card-title">Bug Fables</h5>
+                      <div>
+                        <i class="bi bi-laptop-fill"></i>
+                        <i class="bi bi-phone-fill me-auto"></i>
+                      </div>
+                    </div>
+                    <div class="col discover-group">
                       <span class="discount-percent me-1">-50%</span>
-                      <div class="ori-price-dis-price">
+                      <div class="ori-price-dis-price discover-price">
                         <span class="ori-price"> &euro; 39.99</span>
                         <span class="game-price"> &euro; 19.99</span>
                       </div>
@@ -856,21 +858,25 @@
           <div>
             <div class="card mb-3 discover-game-card">
               <div class="row no-gutters">
-                <div class="col-md-4">
+                <div class="col-md-2">
                   <img
                     class="discover-game-img"
                     src="images/tile (33).jpg"
                     alt="..."
                   />
                 </div>
-                <div class="col-md-8 ps-4">
-                  <div class="card-body">
-                    <h5 class="card-title">Bug Fables</h5>
-                    <div class="d-flex">
-                      <i class="bi bi-laptop-fill"></i>
-                      <i class="bi bi-phone-fill me-auto"></i>
+                <div class="col-md-10 ps-2">
+                  <div class="row discover-info">
+                    <div class="col">
+                      <h5 class="card-title">Bug Fables</h5>
+                      <div>
+                        <i class="bi bi-laptop-fill"></i>
+                        <i class="bi bi-phone-fill me-auto"></i>
+                      </div>
+                    </div>
+                    <div class="col discover-group">
                       <span class="discount-percent me-1">-50%</span>
-                      <div class="ori-price-dis-price">
+                      <div class="ori-price-dis-price discover-price">
                         <span class="ori-price"> &euro; 39.99</span>
                         <span class="game-price"> &euro; 19.99</span>
                       </div>
@@ -883,19 +889,28 @@
           <div>
             <div class="card mb-3 discover-game-card">
               <div class="row no-gutters">
-                <div class="col-md-4">
+                <div class="col-md-2">
                   <img
                     class="discover-game-img"
                     src="images/tile (33).jpg"
                     alt="..."
                   />
                 </div>
-                <div class="col-md-8 ps-4">
-                  <div class="card-body">
-                    <h5 class="card-title">Bug Fables</h5>
-                    <div class="d-flex">
-                      <i class="bi bi-laptop-fill me-auto"></i>
-                      <span class="game-price ms-1"> &euro; 19.99</span>
+                <div class="col-md-10 ps-2">
+                  <div class="row discover-info">
+                    <div class="col">
+                      <h5 class="card-title">Bug Fables</h5>
+                      <div>
+                        <i class="bi bi-laptop-fill"></i>
+                        <i class="bi bi-phone-fill me-auto"></i>
+                      </div>
+                    </div>
+                    <div class="col discover-group">
+                      <span class="discount-percent me-1">-50%</span>
+                      <div class="ori-price-dis-price discover-price">
+                        <span class="ori-price"> &euro; 39.99</span>
+                        <span class="game-price"> &euro; 19.99</span>
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -905,21 +920,56 @@
           <div>
             <div class="card mb-3 discover-game-card">
               <div class="row no-gutters">
-                <div class="col-md-4">
+                <div class="col-md-2">
                   <img
                     class="discover-game-img"
                     src="images/tile (33).jpg"
                     alt="..."
                   />
                 </div>
-                <div class="col-md-8 ps-4">
-                  <div class="card-body">
-                    <h5 class="card-title">Bug Fables</h5>
-                    <div class="d-flex">
-                      <i class="bi bi-laptop-fill"></i>
-                      <i class="bi bi-phone-fill me-auto"></i>
+                <div class="col-md-10 ps-2">
+                  <div class="row discover-info">
+                    <div class="col">
+                      <h5 class="card-title">Bug Fables</h5>
+                      <div>
+                        <i class="bi bi-laptop-fill"></i>
+                        <i class="bi bi-phone-fill me-auto"></i>
+                      </div>
+                    </div>
+                    <div class="col discover-group">
                       <span class="discount-percent me-1">-50%</span>
-                      <div class="ori-price-dis-price">
+                      <div class="ori-price-dis-price discover-price">
+                        <span class="ori-price"> &euro; 39.99</span>
+                        <span class="game-price"> &euro; 19.99</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="card mb-3 discover-game-card">
+              <div class="row no-gutters">
+                <div class="col-md-2">
+                  <img
+                    class="discover-game-img"
+                    src="images/tile (33).jpg"
+                    alt="..."
+                  />
+                </div>
+                <div class="col-md-10 ps-2">
+                  <div class="row discover-info">
+                    <div class="col">
+                      <h5 class="card-title">Bug Fables</h5>
+                      <div>
+                        <i class="bi bi-laptop-fill"></i>
+                        <i class="bi bi-phone-fill me-auto"></i>
+                      </div>
+                    </div>
+                    <div class="col discover-group">
+                      <span class="discount-percent me-1">-50%</span>
+                      <div class="ori-price-dis-price discover-price">
                         <span class="ori-price"> &euro; 39.99</span>
                         <span class="game-price"> &euro; 19.99</span>
                       </div>
@@ -936,6 +986,17 @@
               <i class="bi bi-collection-fill"></i>
               <span class="ms-1">Featured</span>
             </div>
+          </div>
+          <div class="featured mb-1">
+            <img
+              class="featured-big-images"
+              src="images/tile (25).jpg"
+              alt=""
+            />
+          </div>
+          <div class="row">
+            <div class="col-12 col-md-12 col-lg-6 col-xl-6">1 of 2</div>
+            <div class="col-12 col-md-12 col-lg-6 col-xl-6">2 of 2</div>
           </div>
         </div>
       </div>
